[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Kondratiuk Marina <kondratsiuk.marina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-dotenv = "^1.0.0"
mysqlclient = "^2.2.0"
django-mysql = "^4.12.0"
djangorestframework = "^3.14.0"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
